--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@types/node": "^22.7.4",
     "element-plus": "^2.8.4",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.7",
