--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/node": "^22.7.4",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.4",
     "vue": "^3.4.37",
