--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "preinstall": "node ./scripts/preinstall.js"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.4",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.4",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.4.37",
