--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preinstall": "node ./scripts/preinstall.js"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.4",
     "animate.css": "^4.1.1",
